refactor(*): work on jooq repositories